style.css
@font-face {
    font-family: 'agrandirgrand';
    src: url('./fonts/agrandir-grand-webfont.woff2') format('woff2'),
         url('./fonts/agrandir-grand-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}



@font-face {
    font-family: 'agrandirregular';
    src: url('./fonts/agrandir-regular-webfont.woff2') format('woff2'),
         url('./fonts/agrandir-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}


@font-face {
    font-family: 'agrandirtext_bold';
    src: url('./fonts/agrandir-textbold-webfont.woff2') format('woff2'),
         url('./fonts/agrandir-textbold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}


@font-face {
    font-family: 'agrandirwide_light';
    src: url('./fonts/agrandir-widelight-webfont.woff2') format('woff2'),
         url('./fonts/agrandir-widelight-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

:root{
    --white: #FCFDFC;
    --mainButton: #1B1C1C;
    --white30: #FCFDFC30;
    --white20: #FCFDFC20;
    --background: #FCFDFC20;
    --backgroundDark: #00000040;
}

body{
    font-size: 16px;
    overflow: hidden;
}

* {
    margin: 0;
    padding: 0;
    font-family: 'agrandirregular', sans-serif;
    box-sizing: border-box;
    color: var(--white);
    border: none;
  }

main{
    height: 100vh;
    width: 100%;
    background: url("./Background.png") no-repeat center center;
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow:hidden
}

.placeholder-label{
    font-family: 'agrandirwide_light', sans-serif;
}

.title{
    font-family: 'agrandirgrand', sans-serif;
    font-size: 3.5rem;
    font-weight: lighter;
}

#note-title, #modal-title{
    display: none;
    font-family: 'agrandirtext_bold', sans-serif;
    background: none;
    color: var(--white);
    font-size: 1.25rem;
    border-bottom: 1px solid var(--white30);
    padding-bottom: 0.5em;
    margin-bottom: 1rem;
}

#note-text, #modal-text{
    background: none;
    color: var(--white);
    font-size: 1.25rem;
    margin-bottom: -5px;
    overflow: hidden;
}

#form-buttons{
    display: none;
    margin-top: 1.3rem;
    /* display: flex; */
    width:100%;
    justify-content: end;
    margin-bottom: -6px;;
}

.form-container{
    background-color: var(--background);
    min-height: 1.5rem;
    min-width: 841px;
    padding: 1.5rem;
    border-radius: 10px;
    margin-top: 2.25rem;
    border: 1px solid var(--white30);
    backdrop-filter: blur(52px);
}

#form:focus,
input:focus {
  outline: none;
}

#form{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    height: 100%;
    transition-duration: 0.218s;
    transition-property: background, border, opacity, box-shadow, transform;
    transition-timing-function: ease-in;
    
}

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: var(--white);
    opacity: 0.7; /* Firefox */
  }
  
  :-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: var(--white);
  }
  
  ::-ms-input-placeholder { /* Microsoft Edge */
    color: var(--white);
  }

  #submit-button{
    padding: 0.75rem 1rem;
    padding-bottom: 0.6rem;
    width: 93px;
    background-color: var(--mainButton);
    font-size: 1rem;
    text-align: center;
    border-radius: 0.5rem;
    border: 1px solid var(--white30);
    margin-right: 0.5rem
  }

  #form-close-button, #modal-close-button{
    padding: 0.75rem 1rem;
    padding-bottom: 0.6rem;
    width: 93px;
    background: none;
    border-radius: 0.5rem;
    border: 1px solid var(--white30);
    font-size: 1rem;
    line-height: 100%;
  }

  img{
    width: 10%;
    margin-bottom: 2rem;
    padding-right: 0.3rem;
    opacity: 0.8;
  }

  #placeholder{
    background-color: #00000020;
    padding: 4rem;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    align-items: center;
    margin-top: 1rem;
    backdrop-filter: blur(52px);
  }

  #note{
    display: flex;
    /* justify-content: space-between; */
    gap:1rem;
    flex-wrap: wrap;
    margin-top: 1.6rem;
    backdrop-filter: blur(52px);
  }

  .note{
    padding: 1rem;
    border-radius: 0.5rem;
    margin-top: 0;
    /* margin-right: 1rem; */
    /* min-width: 258px; */
    width: 32%;
    height: fit-content ;
    /* display: flex;
    flex-direction: column;
    justify-content: space-between; */
    border: 1px solid var(--white30)
  }
  .note-title, #modal-title{
    padding-bottom: 0.5rem;
    font-size: 1.0625rem;
    border-bottom: 1px solid var(--white30);
    font-family: 'agrandirtext_bold', sans-serif;
    margin-bottom: 0.75rem;
  }
  .note-text{
    margin-bottom: 1rem;
      }

  .toolbar{
    display: flex;
    justify-content: end;
  }
  
  .toolbar  img{
    width: 100%;
    height: 100%;
    margin-bottom: 0;
    margin: 0;
    padding: 0;
  }

  .toolbar-delete{
    margin-right: 0;
  }
  .toolbar > div{
    height: 32px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 32px;
    padding: 0.5rem;
    border-radius: 8px;
    border: 1px solid var(--white30);
  }

  .color-picker{
    margin-right: 0.5rem;
  }

  .modal{
  position: fixed;
  left: 0;
  z-index: 200;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(44, 43, 43, 0.7);
  display: none;
  visibility: hidden;
  transform: scale(1.1);
  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
  }
  .modalContent{
    position: absolute;
    color: var(--white);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: var(--backgroundDark);
    padding: 1rem 1.5rem;
    width: 24rem;
    border-radius: 0.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    row-gap: 1rem;
    backdrop-filter: blur(8px);
    border:1px solid var(--white30)
  }

  #modal-text,  #modal-title, #modal-close-button{
    font-size: 1rem;
  }
#modal-close-button{
  align-self: end;
}
#modal-title {
  display: block;
  margin-bottom: 0;
}

#modal-text{
  margin-bottom:1rem;
}

.open-modal {
  display: block;
  opacity: 1;
  visibility: visible;
  transform: scale(1);
  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
}

